[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "paho-mqtt>=2.1.0",
    "pymodbustcp>=0.3.0",
    "requests>=2.32.5",
    "streamlit-webrtc>=0.63.4",
    "streamlit>=1.49.1",
    "opencv-python>=4.12.0.88",
]
